# obs-shaderfilter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/: FUNDING.yml
data/examples/: Add.shader  EdgeDetection.shader  Luminance.shader  PelinNoise.shader  ScanLine.effect  VHS.shader  animated_path.effect  animated_texture.effect  ascii.shader  aspect_ratio.shader  background_removal.effect  blend.effect  blend_opacity.shader  blink.shader  bloom.shader  border.shader  bt601tobt709.shader  bt709tobt601.shader  burn.shader  cartoon.effect  cell_shaded.shader  color_grade_filter.shader  corner_pin.shader  darken.shader  divide_rotate.shader  divide_rotate_ convert.shader  doodle.effect  drop_shadow.shader  drunk.shader  edge.shader  edge_detection.shader  embers.effect  emboss.shader  emboss_color.shader  filter_template.effect  filter_template.shader  fire-3.effect  fire.shader  frosted_glass.shader  frostedglass.shader  (+43 more)
data/locale/: en-US.ini
src/: obs-shaderfilter.c
